[package]
name = "person-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
kafka = "0.9"
chrono = "0.4.31"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
